# BuEditor

./: .gitignore  CMakeLists.txt  README.md  TODO  fonttoh.py  sintax.bu
config/: settings.json
scrips/: sintax.bu
src/: TextEditor.cpp  TextEditor.h  main.cpp
widgets/: README.md
workspaces/: default.workspace.json
